--- a/index.html
+++ b/index.html
@@ -35,37 +35,37 @@
             <h2>我们的甜品菜单</h2>
             <div class="dessert-grid">
                 <div class="dessert-item">
-                    <img src="https://via.placeholder.com/300x200?text=草莓慕斯" alt="草莓慕斯">
+                    <img src="https://images.unsplash.com/photo-1587375253818-683a9d3a7780?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&h=400&q=80" alt="草莓慕斯">
                     <h3>草莓慕斯</h3>
                     <p>细腻顺滑，酸甜可口，草莓的清新与慕斯的绵密完美结合。</p>
                     <span class="price">¥ 38.00</span>
                 </div>
                 <div class="dessert-item">
-                    <img src="https://via.placeholder.com/300x200?text=提拉米苏" alt="提拉米苏">
+                    <img src="https://images.unsplash.com/photo-1620853503198-d1a1b15b6d91?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&h=400&q=80" alt="经典提拉米苏">
                     <h3>经典提拉米苏</h3>
                     <p>醇厚咖啡酒香，马斯卡彭芝士的浓郁，带你领略意式浪漫。</p>
                     <span class="price">¥ 42.00</span>
                 </div>
                 <div class="dessert-item">
-                    <img src="https://via.placeholder.com/300x200?text=抹茶蛋糕" alt="抹茶蛋糕">
+                    <img src="https://images.unsplash.com/photo-1627914041724-42f8c0d5757d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&h=400&q=80" alt="日式抹茶卷">
                     <h3>日式抹茶卷</h3>
                     <p>清新抹茶与红豆的绝配，口感清爽不甜腻，回味悠长。</p>
                     <span class="price">¥ 35.00</span>
                 </div>
                 <div class="dessert-item">
-                    <img src="https://via.placeholder.com/300x200?text=马卡龙" alt="马卡龙">
+                    <img src="https://images.unsplash.com/photo-1582136056580-b2eb9146ec71?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&h=400&q=80" alt="七彩马卡龙">
                     <h3>七彩马卡龙</h3>
                     <p>酥脆的外壳，柔软的内馅，每一颗都充满惊喜。多重口味选择。</p>
                     <span class="price">¥ 15.00/颗</span>
                 </div>
                 <div class="dessert-item">
-                    <img src="https://via.placeholder.com/300x200?text=巧克力布朗尼" alt="巧克力布朗尼">
+                    <img src="https://images.unsplash.com/photo-1627850024479-7a70a80d463d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&h=400&q=80" alt="浓情布朗尼">
                     <h3>浓情布朗尼</h3>
                     <p>苦甜交织的浓郁巧克力风味，搭配核桃仁，口感扎实。</p>
                     <span class="price">¥ 30.00</span>
                 </div>
                 <div class="dessert-item">
-                    <img src="https://via.placeholder.com/300x200?text=水果塔" alt="水果塔">
+                    <img src="https://images.unsplash.com/photo-1594916895311-2d79d2358892?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=600&h=400&q=80" alt="缤纷水果塔">
                     <h3>缤纷水果塔</h3>
                     <p>新鲜水果堆叠，搭配香草卡仕达酱和酥脆塔皮，颜值与美味并存。</p>
                     <span class="price">¥ 45.00</span>
